tests/parser_cases/invalid/bad_assign.ob0
MODULE Main;
BEGIN
  x = 1;
END Main.
